# IG_ProyectoFinal

./: CMakeLists.txt  README.md
binary/: ProyectoFinal
binary/resources/shaders/: fshader.glsl
src/: main.cpp
